Removed CDNs and added minified files

--- a/project2/index.html
+++ b/project2/index.html
@@ -10,10 +10,10 @@
 
 
   <!-- Bootstrap CSS v5.2 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="libs/css/bootstrap.min.css">
 
   <!-- Style sheet -->
-  <link rel="stylesheet" href="libs/css/style.css">
+  <link rel="stylesheet" href="libs/css/style.min.css">
 </head>
 
 <body>
@@ -407,14 +407,14 @@
 
 
   <!-- Bootstrap JS v5.2 -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="libs/js/bootstrap.bundle.min.js"></script>
 
   <!-- Sweet Alert JS -->
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="libs/js/sweetalert.min.js"></script>
 
   <!-- My own JS -->
   <script src="libs/js/jquery-3.6.0.min.js"></script>
-  <script src="libs/js/script.js"></script>
+  <script src="libs/js/script.min.js"></script>
 
 
 </body>
